Add role-based user management with admin activation