@@ -2,22 +2,24 @@ package com.tramed.backend.presentation.webapi.security.user;
 
 import com.tramed.backend.core.base.model.common.UserId;
 import com.tramed.backend.core.base.model.user.User;
+import com.tramed.backend.core.base.model.user.UserRole;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-public class AdminUserDetails implements UserDetails {
+public class ApplicationUserDetails implements UserDetails {
 
   private final User user;
 
-  public AdminUserDetails(User user) {
+  public ApplicationUserDetails(User user) {
     this.user = user;
   }
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return Collections.emptyList();
+    return List.of(new SimpleGrantedAuthority("ROLE_" + user.role().name()));
   }
 
   @Override
@@ -56,5 +58,9 @@ public class AdminUserDetails implements UserDetails {
 
   public String getFullName() {
     return user.fullName();
+  }
+
+  public UserRole getRole() {
+    return user.role();
   }
 }
